--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon index"
+    "dev": "nodemon index"
   },
   "author": "sooraj s",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.15",
     "socket.io": "^2.3.0"
   }
