--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   "author": "sooraj s",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.12",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.2.5",
-    "nodemon": "^2.0.15",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.4",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
